[metadata]
name = ansible-role-tripleo-undercloud-post
summary = ansible-role-tripleo-undercloud-post - A ansible role for the post undercloud install steps required for an overcloud deployment
description-file =
    README.md
author = RDO-CI Team
author-email = trown@redhat.com larks@redhat.com mbultel@redhat.com, whayutin@redhat.com
home-page = https://github.com/redhat-openstack/ansible-role-tripleo-undercloud-post
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    usr/local/share/ansible-role-tripleo-undercloud-post/defaults = ../ansible-role-tripleo-undercloud-post/defaults/*
    usr/local/share/ansible-role-tripleo-undercloud-post/handlers = ../ansible-role-tripleo-undercloud-post/handlers/*
    usr/local/share/ansible-role-tripleo-undercloud-post/meta = ../ansible-role-tripleo-undercloud-post/meta/*
    usr/local/share/ansible-role-tripleo-undercloud-post/tasks = ../ansible-role-tripleo-undercloud-post/tasks/*
    usr/local/share/ansible-role-tripleo-undercloud-post/templates = ../ansible-role-tripleo-undercloud-post/templates/*
    usr/local/share/ansible-role-tripleo-undercloud-post/tests = ../ansible-role-tripleo-undercloud-post/tests/*
    usr/local/share/ansible-role-tripleo-undercloud-post/vars = ../ansible-role-tripleo-undercloud-post/vars/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
