[metadata]
name = ansible-role-tripleo-undercloud-post
summary = ansible-role-tripleo-undercloud-post - A ansible role for the post undercloud install steps required for an overcloud deployment
description-file =
    README.md
author = RDO-CI Team
author-email = trown@redhat.com larks@redhat.com mbultel@redhat.com, whayutin@redhat.com
home-page = https://github.com/redhat-openstack/ansible-role-tripleo-undercloud-post
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    usr/local/share/ansible/roles/tripleo-undercloud-post/defaults = defaults/*
    usr/local/share/ansible/roles/tripleo-undercloud-post/handlers = handlers/*
    usr/local/share/ansible/roles/tripleo-undercloud-post/meta = meta/*
    usr/local/share/ansible/roles/tripleo-undercloud-post/tasks = tasks/*
    usr/local/share/ansible/roles/tripleo-undercloud-post/templates = templates/*
    usr/local/share/ansible/roles/tripleo-undercloud-post/tests = tests/*
    usr/local/share/ansible/roles/tripleo-undercloud-post/vars = vars/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
